revert title in browser v3 manifest

--- a/apps/browser/src/assets/manifest/v3/manifest.json
+++ b/apps/browser/src/assets/manifest/v3/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "UABMagic (v3)",
+  "name": "UABMagic",
   "short_name": "UABMagic",
   "version": "1.0.0",
   "description": "Listen to the Land. Tune in the World.",
